[gd_scene load_steps=6 format=3 uid="uid://bgs0mvqyeu2a5"]

[ext_resource type="Script" uid="uid://jrkwo3nlpfak" path="res://scenes/ui/experience_bar.gd" id="1_r233f"]
[ext_resource type="Texture2D" uid="uid://cox1kcboy64wj" path="res://assets/icon/charator_icon.png" id="2_gmm3j"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gmm3j"]
content_margin_left = 2.0
content_margin_top = 2.0
content_margin_right = 2.0
content_margin_bottom = 2.0
bg_color = Color(0.247059, 0.14902, 0.192157, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3

[sub_resource type="SystemFont" id="SystemFont_gmm3j"]
subpixel_positioning = 0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r233f"]
bg_color = Color(0.743158, 0.570937, 0.173481, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.8, 0.8, 0.8, 0)

[node name="ExperienceBar" type="CanvasLayer"]
script = ExtResource("1_r233f")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 390

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 64)
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 1

[node name="PersonButton" type="Button" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
size_flags_horizontal = 0
theme_type_variation = &"CommonButton"
theme_override_styles/hover = SubResource("StyleBoxFlat_gmm3j")
theme_override_styles/pressed = SubResource("StyleBoxFlat_gmm3j")
theme_override_styles/normal = SubResource("StyleBoxFlat_gmm3j")
icon = ExtResource("2_gmm3j")
expand_icon = true

[node name="CheckMarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/PersonButton"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/PersonButton/CheckMarginContainer"]
layout_mode = 2
mouse_filter = 1
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_fonts/font = SubResource("SystemFont_gmm3j")
theme_override_font_sizes/font_size = 14
text = "查看"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ColorRect" type="ColorRect" parent="MarginContainer/HBoxContainer/PersonButton/CheckMarginContainer"]
layout_mode = 2
mouse_filter = 1
color = Color(1, 1, 1, 0.388235)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="HealthProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2
theme_type_variation = &"ProgressBarHealth"
max_value = 1.0
value = 0.5
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2
theme_override_constants/margin_top = 3

[node name="HealthLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "114 / 514"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2

[node name="ExperienceProgressBar" type="ProgressBar" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2
theme_override_styles/fill = SubResource("StyleBoxFlat_r233f")
max_value = 1.0
value = 0.5
show_percentage = false

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 1

[node name="ExperienceLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/MarginContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 1
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 3
theme_override_font_sizes/font_size = 16
text = "123213/999999"
horizontal_alignment = 1
vertical_alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 5

[node name="NameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer3"]
unique_name_in_owner = true
layout_mode = 2
theme_override_colors/font_outline_color = Color(0.247059, 0.14902, 0.192157, 1)
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 14
text = "Lv.433 大佬我最强大"
